--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="relative">
             <video src="earth.mp4" muted loop autoplay></video>
         </div>
-        <div class="absolute top-1/2 right-40 transform -translate-y-1/2 text-white text-4xl font-bold flex flex-col gap-6">
-            <h1 class="font-roboto text-5xl font-semibold">Name of the project</h1>
-            <p>Some description</p>
+        <div class="absolute top-1/2 right-40 transform -translate-y-1/2  text-white text-4xl font-bold flex flex-col gap-6">
+            <h1 class="font-roboto text-5xl font-semibold">Parallel universes</h1>
+            <p class="font-roboto text-lg">Добро пожаловать в захватывающий мир космоса!<br> Наш сайт — это ваше виртуальное окно во Вселенную.<br> Откройте для себя тайны Вселенной,<br> узнайте больше о планетах, звёздах, галактиках<br> и отправьтесь в увлекательное путешествие<br> за пределы Земли!</p>
 
             
             <!-- Button -->
             <a href="Planets.html" class="Btn">
-              SKIP
+              START
               <svg viewBox="0 0 320 512" class="svg">
                 <path
                   d="M52.5 440.6c-9.5 7.9-22.8 9.7-34.1 4.4S0 428.4 0 416V96C0 83.6 7.2 72.3 18.4 67s24.5-3.6 34.1 4.4l192 160L256 241V96c0-17.7 14.3-32 32-32s32 14.3 32 32V416c0 17.7-14.3 32-32 32s-32-14.3-32-32V271l-11.5 9.6-192 160z"
