--- a/Search_info.html
+++ b/Search_info.html
@@ -5,45 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Searching Information</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    </head>
+    <style>
+        /* Стили для видео */
+        video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+
+        /* Центрирование контента */
+        .center-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        /* Загрузочный экран */
+        #loader {
+            background: rgba(0, 0, 0, 0.9);
+        }
+    </style>
 </head>
-<body style="background-image: url(https://cdn.mos.cms.futurecdn.net/HuGGeENt6kGyixe3hT9tnY-1200-80.jpg);">
+<body class="text-white">
+
     <!-- Загрузка -->
-    <div id="loader" class="fixed inset-0 bg-sky-950 flex items-center justify-center z-50">
-        <div class="content">
+    <div id="loader" class="fixed inset-0 flex items-center justify-center z-50">
+        <div class="content text-center">
             <div class="planet">
-               <div class="ring"></div>
-                  <div class="cover-ring"></div>
-               <div class="spots">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-               </div>
+                <div class="ring"></div>
+                <div class="cover-ring"></div>
+                <div class="spots">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
-            <p>loading</p>
-         </div>
-      </div>
-
-      <!-- Поиск Информации -->
-      <main>
-        <div class="flex flex-col justify-center items-center gap-6 h-screen">
-          <h1 class="font-roboto text-3xl text-white">Узнай все про космос не покидая сайт!</h1>
-          <div class="flex flex-row gap-4">
-            <input class="h-[35px] w-[300px]" placeholder="Введите поисковой запрос...">
-            <button  onclick="">Поиск...</button>
-          </div>
+            <p class="text-lg font-semibold">Loading...</p>
         </div>
-      </main>
+    </div>
 
+    <!-- Видео фон -->
+    <video autoplay muted loop>
+        <source src="cosmos.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
+    <!-- Центрированный контент -->
+    <div class="center-content">
+        <h1 class="text-4xl font-bold mb-6">Узнай все про космос не покидая сайт!</h1>
+        <div class="flex flex-col items-center gap-4">
+            <div class="relative w-96">
+                <input
+                    id="query"
+                    class="w-full border border-blue-500 rounded-lg px-4 py-2 text-black focus:outline-none"
+                    name="text"
+                    type="text"
+                    placeholder="Explore the cosmos..."
+                />
+                <button
+                    id="searchButton"
+                    class="absolute right-0 top-0 mt-1.5 mr-1.5 bg-blue-600 hover:bg-blue-700 text-white px-4 py-1 rounded-lg"
+                >
+                    Search
+                </button>
+            </div>
+        </div>
+    </div>
 
-
-
+    <script src="script.js"></script>
 </body>
 </html>
