--- a/Search_info.html
+++ b/Search_info.html
@@ -3,85 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Searching Information</title>
+    <title>Поиск по космосу</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Стили для видео */
-        video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-        }
-
-        /* Центрирование контента */
-        .center-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-
-        /* Загрузочный экран */
-        #loader {
-            background: rgba(0, 0, 0, 0.9);
-        }
-    </style>
+    <script async src="https://cse.google.com/cse.js?cx=f03a7f610a8a14952"></script>
 </head>
-<body class="text-white">
-
-    <!-- Загрузка -->
-    <div id="loader" class="fixed inset-0 flex items-center justify-center z-50">
-        <div class="content text-center">
-            <div class="planet">
-                <div class="ring"></div>
-                <div class="cover-ring"></div>
-                <div class="spots">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-            <p class="text-lg font-semibold">Loading...</p>
-        </div>
-    </div>
-
-    <!-- Видео фон -->
-    <video autoplay muted loop>
-        <source src="cosmos.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+<body class="relative h-screen overflow-hidden">
+    <video 
+    class="absolute top-0 left-0 w-full h-full object-cover z-[-1]"
+    autoplay muted loop>
+    <source src="Images_Videos/Space_stars.mp4" type="video/mp4">
+    Your browser does not support the video tag.
     </video>
-
-    <!-- Центрированный контент -->
-    <div class="center-content">
-        <h1 class="text-4xl font-bold mb-6">Узнай все про космос не покидая сайт!</h1>
-        <div class="flex flex-col items-center gap-4">
-            <div class="relative w-96">
-                <input
-                    id="query"
-                    class="w-full border border-blue-500 rounded-lg px-4 py-2 text-black focus:outline-none"
-                    name="text"
-                    type="text"
-                    placeholder="Explore the cosmos..."
-                />
-                <button
-                    id="searchButton"
-                    class="absolute right-0 top-0 mt-1.5 mr-1.5 bg-blue-600 hover:bg-blue-700 text-white px-4 py-1 rounded-lg"
-                >
-                    Search
-                </button>
-            </div>
+    <div class="relative z-10 flex flex-col items-center justify-center h-full bg-black bg-opacity-50">
+        <h1 class="text-4xl md:text-5xl font-bold mb-6 text-center text-white px-5">Узнай все про космос не покидая сайт!</h1>
+        <div class="flex flex-col items-center gap-4 px-5 w-full sm:w-[900px]">
+            <!-- Google Custom Search -->
+            <div class="gcse-search"></div>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
+
+
+
